--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
     <head>
         <title>Belajar membuat web</title>
     </head>
-
+        
         <h1>Belajar Web</h1>
+        <h2>Welcome To Pubg Mobile</h2>
 
         <p>Jadi di halaman ini saya akan belajar cara membuat website</p>
                                                                                                 
